third-party/vendor/bit-struct-0.3.2/tests/compile/incorrect_type.rs
enum EnumNoBits {
    A,
    B,
}

bit_struct::bit_struct! {
    struct Incorrect(u16) {
        a: EnumNoBits
    }
}

fn main() {}
